<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_layout"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profileHelp"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stepstoEdit"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/steps1Pro"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/steps2Pro"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/steps3Pro"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notePro"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/editbtnPro"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/helpUpdatebtn"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_blue_clr"
                        android:layout_width="wrap_content">
                        <TextView
                            android:layout_weight="1.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Edit My Profile"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>