<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/memHelp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_marginTop="13dp"
                        android:layout_marginBottom="13dp"
                        android:layout_height="1dp"
                        android:layout_width="match_parent"
                        android:background="@color/LightGrey"/>

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/premiumHelp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/premiumHead"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1. Chat unlimited with your matches.\n2. View contact numbers/Send SMS.\n3. Send Premium Interest with your contact details.\n4. View the complete name of your matches.\n5. Get Premium Assistance on priority fo all concerns/queries!"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="These benefits should help you to get a quick response in your partner search."
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="To check our premium plans, click on the button below: "
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/helpPremiumPlans"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_blue_clr"
                        android:layout_width="wrap_content">
                        <TextView
                            android:layout_weight="1.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Premium Plans"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>